<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/bicycle_image"
            app:srcCompat="@drawable/login_bicycle" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/main_text_1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:text="@string/main_text_2"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/registrationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#4B09F3"
            android:textColor="@color/white"
            android:text="@string/Button_text_1"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#004B09F3"
            android:elevation="0dp"
            android:stateListAnimator="@null"
            android:text="@string/Button_text_2"
            android:textAllCaps="false"
            android:textColor="#4B09F3"
            android:textSize="16sp"
            android:translationZ="0dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>