<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:onClick="back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/vector"
                app:title="@string/reg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="no"
                    android:ems="10"
                    android:fontFamily="@font/inter_medium"
                    android:hint="@string/login"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="6dp"
                    tools:ignore="TextContrastCheck">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="no"
                    android:ems="10"
                    android:fontFamily="@font/inter_medium"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="6dp"
                    tools:ignore="TextContrastCheck">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="no"
                    android:ems="10"
                    android:fontFamily="@font/inter_medium"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="6dp"
                    app:passwordToggleEnabled="true"
                    tools:ignore="TextContrastCheck">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:password="true"
                        android:fontFamily="@font/inter_medium" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/repeat_password_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="no"
                    android:ems="10"
                    android:fontFamily="@font/inter_medium"
                    android:hint="@string/password2"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="6dp"
                    app:passwordToggleEnabled="true"
                    tools:ignore="TextContrastCheck">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:password="true"
                        android:fontFamily="@font/inter_medium" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/select_sex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButtonMale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:fontFamily="@font/inter_medium"
                        android:padding="10dp"
                        android:text="@string/man"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/radioButtonFemale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:padding="10dp"
                        android:text="@string/woman"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:padding="10dp"
                        android:text="@string/another"
                        android:textSize="16sp" />
                </RadioGroup>

                <Button
                    android:id="@+id/buttonRegistration"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:backgroundTint="#4B09F3"
                    android:fontFamily="@font/inter_semi_bold"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:onClick="go_to_main"
                    android:text="@string/Button_text_1"
                    android:textAllCaps="false"
                    android:textSize="16sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/registration_text"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>