<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="back"
                app:navigationIcon="@drawable/vector"
                app:title="@string/entrance" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="303dp"
                    android:layout_height="268dp"
                    android:contentDescription="@string/bicycle_image"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/login_bicycle" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_entrance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="no"
                    android:ems="10"
                    android:fontFamily="@font/inter_medium"
                    android:hint="@string/login"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="6dp"
                    tools:ignore="TextContrastCheck">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_entrance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="no"
                    android:ems="10"
                    android:fontFamily="@font/inter_medium"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="6dp"
                    app:passwordToggleEnabled="true"
                    tools:ignore="TextContrastCheck">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:password="true"
                        android:fontFamily="@font/inter_medium"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonEnter"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:backgroundTint="#4B09F3"
                    android:textColor="@color/white"
                    android:fontFamily="@font/inter_semi_bold"
                    android:gravity="center"
                    android:onClick="go_to_main"
                    android:text="@string/enter"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>